Commented the module builder ignore directives.

--- a/.gitignore
+++ b/.gitignore
@@ -20,10 +20,10 @@ cache/themes/*
 cache/xml/*
 # Ignore some files and directories from the custom directory.
 custom/history/*
-custom/modulebuilder/*
+# custom/modulebuilder/*
 custom/working/*
-custom/modules/*/Ext/
-custom/application/Ext/*
+# custom/modules/*/Ext/
+# custom/application/Ext/*
 # Custom configuration should also be ignored.
 /config.php
 /config_override.php
