changed gitignore to stop ignoring config.php
Signed-off-by: Pralhad Rajgor <pralhad@vitruviantech.com>

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,5 +1,5 @@
 copy.src.files=false
-copy.src.target=D:\\xampp\\htdocs\\sugarcrm
+copy.src.target=C:\\xampp\\htdocs\\rrd
 index.file=index.php
 run.as=LOCAL
-url=http://localhost/sugarcrm/
+url=http://localhost/rrd/
