--- a/.gitignore
+++ b/.gitignore
@@ -25,8 +25,8 @@ custom/working/*
 # custom/modules/*/Ext/
 # custom/application/Ext/*
 # Custom configuration should also be ignored.
-/config.php
-/config_override.php
+# config.php
+# config_override.php
 # The silent upgrade scripts aren't needed.
 silentUpgrade*.php
 # Logs files can safely be ignored.
